# daprox

./: Cargo.toml  Dockerfile
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/daprox/: Cargo.toml
crates/daprox/src/: config.rs
crates/daprox/src/server/: mod.rs  sql.rs
crates/postgres/: Cargo.toml
crates/postgres/src/: lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
