[package]
name = "daprox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daprox_core = { path = "../core" }
daprox_postgres = { path = "../postgres" }

futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

axum = "0.6.1"

[dev-dependencies]
axum-test-helper = "0.2.0"
