[package]
name = "daprox_postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daprox_core = { path = "../core" }

futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

tokio-postgres = "0.7.7"
postgres-types = { version = "0.2.4", features = ["with-serde_json-1"]}
tokio-postgres-rustls = "0.9.0"
bytes = "1.3.0"
url = "2.3.1"
rustls = { version = "0.20.7", optional = true, features = ["dangerous_configuration"] }

[features]
default = ["rustls"]
